<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarRetoActivity">

    <?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CanalesActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <!-- ImageButton -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="81dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imgUser"
                    android:layout_width="50dp"
                    android:layout_height="52dp"
                    android:layout_gravity="left"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="?attr/actionModeCloseDrawable" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:text="@string/lblAgregarReto" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="369dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/lblTituloNuevoReto" />

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/lblDescripcionNuevoReto" />

                <EditText
                    android:id="@+id/editTextTextText"
                    android:layout_width="match_parent"
                    android:layout_height="207dp"
                    android:ems="10"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:text="@string/lblComplejidadNuevoReto" />

                <RadioGroup
                    android:id="@+id/difficultyRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="79dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/easyRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/radioFacil" />

                    <RadioButton
                        android:id="@+id/mediumRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radioMedio" />

                    <RadioButton
                        android:id="@+id/hardRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radioDificil" />
                </RadioGroup>

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnCrearReto" />

            </LinearLayout>




            <!-- Cuatro botones alineados horizontalmente -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="97dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnInicio" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnAmigos" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnCanales" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnNotifications" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>