<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/lblRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblRegistro"
            android:textSize="25dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblNombre"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="20dp"
            android:text="@string/lblNombre"/>

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblEmail"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="20dp"
            android:text=""/>

        <TextView
            android:id="@+id/lblUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblUser"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/txtUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblPassword"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/lblRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblRepeatPassword"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/txtrepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRegistrar"
            android:textSize="20dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>